HelloUltraviolet/Fixtures/RejectedSource/Procedures/PreconditionCallerObligation/Expected.uv
//! Expected diagnostic metadata for the PreconditionCallerObligation rejected-source specimen.

expectedDiagnostic("E-SEM-2801", "req.15.CallerResponsibleForPrecondition")
